--- a/src/App.css
+++ b/src/App.css
@@ -120,10 +120,10 @@ td {
   border: 1px solid red;
 }
 
-th:first-of-type,
+thead tr:first-of-type th:first-of-type,
 td:first-of-type {
   width: 20%;
-  border-right: 5px solid tan;
+  border-right: 3px solid tan;
 }
 
 tbody tr:nth-of-type(2n+1) {
@@ -132,6 +132,10 @@ tbody tr:nth-of-type(2n+1) {
 
 tbody tr:nth-of-type(2n) {
   background-color: pink;
+}
+
+tbody tr td:not(:first-of-type) {
+  cursor: pointer;
 }
 
 .test-launcher__box {
